# Objective_Programming_project

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
GamePlay/: GamePlay.cpp  GamePlay.h  Player.cpp  Player.h  Przeszkoda.cpp  Przeszkoda.h
engine/: GameManager.cpp  GameManager.h  GameStateController.h
graphics/: wyniki.txt
states/GamePlay/: GamePlayController.cpp  GamePlayController.h
states/Menu/: MenuController.cpp  MenuController.h
states/OptionsContoller/: OptionsController.cpp  OptionsController.h
states/Scores/: ScoresController.cpp  ScoresController.h
